src/objects/ADvendio__RTBAdSpecAdvertiser__c.object
<CustomObject>
    <description>PA web service writes data to this object.</description>
    <fields>
        <fullName>ADvendio__RTBAdSpec__c</fullName>
        <description>The PA AdSpec, to whom this record belongs to.</description>
        <inlineHelpText>The RTB AdSpec, to whom this record belongs to.</inlineHelpText>
        <label>PA Ad Spec (deprecated)</label>
        <referenceTo>ADvendio__RTBAdSpec__c</referenceTo>
        <relationshipLabel>PA Ad Specs Advertisers (deprecated)</relationshipLabel>
        <relationshipName>RTBAdSpecAdvertiser</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__RTBAdvertiser__c</fullName>
        <description>The PA advertiser, to whom this record belongs to.</description>
        <inlineHelpText>The RTB advertiser, to whom this record belongs to.</inlineHelpText>
        <label>PA Advertiser (deprecated)</label>
        <referenceTo>ADvendio__RTBAccount__c</referenceTo>
        <relationshipLabel>PA Ad Specs Advertisers (deprecated)</relationshipLabel>
        <relationshipName>RTBAdSpecAdvertiser</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__Status__c</fullName>
        <description>One of &quot;whitelist&quot; or &quot;blacklist&quot;</description>
        <inlineHelpText>One of &quot;whitelist&quot; or &quot;blacklist&quot;</inlineHelpText>
        <label>Status (deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__UniqueKey__c</fullName>
        <description>Unique Key. Will be generated automatically.</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique Key. Will be generated automatically.</inlineHelpText>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>PA Ad Spec Advertiser (deprecated)</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__RTBAdSpec__c</columns>
        <columns>ADvendio__RTBAdvertiser__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>PA AdSpec Advertiser</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PA Ad Specs Advertisers (deprecated)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>